local events css
local events css

--- a/wp-content/themes/gwtd3/layouts/gwtd-map.css
+++ b/wp-content/themes/gwtd3/layouts/gwtd-map.css
@@ -5,9 +5,11 @@
  *
  * Learn more: https://developer.wordpress.org/themes/basics/template-files/
 */
-.section-localevents {
-	padding-top: 0;
+
+.section-localevents .container {
+	margin-top: 4rem;
 }
+
 .gwtd_map {
 	height: 600px;
 	margin: 0;
