clean up social-mentions
Removed customized social-mentions as we are using the directory one now.

--- a/wp-content/themes/gwtd3/style.css
+++ b/wp-content/themes/gwtd3/style.css
@@ -729,6 +729,14 @@ article.type-post h2 {
 	clear: both;
 }
 
+/* Social-Mentions
+–––––––––––––––––––––––––––––––––––––––––––––––––– */
+
+#socment-hashtag-header,
+#socment-hashtag-footer {
+	font-family: 'Changa',sans-serif !important;
+}
+
 /* Media Queries
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 
