--- a/wp-content/themes/gwtd3/style.css
+++ b/wp-content/themes/gwtd3/style.css
@@ -370,7 +370,7 @@ article.type-post h2 {
 }
 
 #footer-social {
-	margin: 5.5rem 0;
+	margin-top: 3.5rem;
 }
 
 #footer-social a {
@@ -600,7 +600,7 @@ article.type-post h2 {
 	list-style: none !important;
 	margin: 0 !important;
 	padding: 0 !important;
-	font-size: 2.5rem !important;
+	font-size: 1.8rem !important;
 }
 
 #footer-menu li {
@@ -731,16 +731,9 @@ article.type-post h2 {
 
 /* Mailpoet Form
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
-.widget_mailpoet_form {
-	margin-bottom: 6rem !important;
-}
-
 .mailpoet_text {
 	font-size: 1.4rem !important;
-}
-
-#subscribe-form {
-	text-align:center !important;;
+	width: 150px !important;
 }
 
 #subscribe-form p {
@@ -754,12 +747,11 @@ article.type-post h2 {
 }
 
 #subscribe-form h2 {
-	font-size: 3rem !important;
+	font-size: 2.5rem !important;
 	margin-top: 0 !important;
 }
 
 #subscribe-form .mailpoet_paragraph {
-	margin-left: 20px !important;
 	display: inline-block !important;
 	width: auto !important;
 	height: auto !important;
@@ -776,6 +768,9 @@ article.type-post h2 {
 	font-weight: 600 !important;
 	height: auto !important;
 	font-family: 'Changa',sans-serif;
+	margin-left: 2rem;
+	width: 150px !important;
+	padding: 0 10px !important;
 }
 
 #subscribe-form .mailpoet_submit:hover {
@@ -819,6 +814,28 @@ article.type-post h2 {
 
 	#countdown div {
 		font-size: 4.5em;
+	}
+}
+
+@media (max-width: 843px) {
+	.footer-tuned .six.columns {
+		width: 100% !important;
+		clear:both;
+		margin: 0 !important;
+	}
+
+	#subscribe-form {
+		width: 280px !important;
+		margin: 0 auto !important;
+	}
+
+	#subscribe-form .mailpoet_submit {
+		width: 130px !important;
+		margin-left: 1rem !important;
+	}
+
+	.mailpoet_text {
+		width: 130px !important;
 	}
 }
 
@@ -907,10 +924,9 @@ article.type-post h2 {
 	#footer-menu {
 		text-align: center !important;
 	}
-
+	
 	#footer-menu li {
-		display: block !important;
-		margin: 0 1.0rem 0 0 !important;
+		margin: 0 !important;
 	}
 
 	.hero.header {
@@ -939,17 +955,12 @@ article.type-post h2 {
 	
 	.gwtd-team-member-bio,
 	.gwtd-team-member-image {
-		text-align: center;
 		width: 100%;
 		clear: both;
 	}
 
 	.gwtd-team-member-name span {
 		display: inline-block;
-	}
-
-	.gwtd-team-member-name {
-		text-align: center;
 	}
 
 	.gwtd-team-member-image,
