--- a/wp-content/themes/gwtd3/style.css
+++ b/wp-content/themes/gwtd3/style.css
@@ -503,12 +503,13 @@ article.type-post h2 {
 	list-style: none;
 	margin: 0;
 	padding: 0;
-	font-size: 2rem;
+	font-size: 1.8rem;
 }
 
 .section.primary-menus ul li {
 	display: inline-block;
-	margin: 0 1.0rem 0 0;
+	/*margin: 0 1.0rem 0 0;*/
+	margin-bottom: 0 !important;
 }
 
 .section.primary-menus ul li a {
@@ -860,17 +861,9 @@ article.type-post h2 {
 	}
 }
 
-/* Small devices (landscape phones, up to 550px)*/
-@media (max-width: 768px) {
-	.section.lp-what-it-is h2,
-	.section.lp-where-it-is h2,
-	.section.lp-how-to-get-involved h2,
-	.section.lp-when-it-is h2 {
-		font-size: 3.5rem;
-		margin: 5rem 0;
-	}
 
-	.section.primary-menus .columns {
+@media (max-width: 980px) {
+.section.primary-menus .columns {
 		display: none;
 	}
 
@@ -880,7 +873,17 @@ article.type-post h2 {
 	}
 
 	.menu-mobile-menu-container {
-		font-size: 2rem !important;
+		font-size: 1.8rem !important;
+	}
+}
+
+@media (max-width: 768px) {
+	.section.lp-what-it-is h2,
+	.section.lp-where-it-is h2,
+	.section.lp-how-to-get-involved h2,
+	.section.lp-when-it-is h2 {
+		font-size: 3.5rem;
+		margin: 5rem 0;
 	}
 
 	.bottom.sp .columns {
