--- a/wp-content/themes/gwtd3/style.css
+++ b/wp-content/themes/gwtd3/style.css
@@ -894,6 +894,10 @@ article.type-post h2 {
 	margin-top: 5rem;
 }
 
+.viewfulllinks {
+	margin-top: 5rem;
+}
+
 .viewfulllinks h4 {
 	margin-bottom: 5px;
 }
