--- a/wp-content/themes/gwtd3/style.css
+++ b/wp-content/themes/gwtd3/style.css
@@ -31,8 +31,8 @@ body {
 }
 
 /*body.home {*/
-	/*font-family: 'Changa', sans-serif;*/
-	/*font-size: 2.5rem;*/
+/*font-family: 'Changa', sans-serif;*/
+/*font-size: 2.5rem;*/
 /*}*/
 
 a {
@@ -302,7 +302,8 @@ strong {
 .section.lp-how-to-get-involved h2,
 .section.lp-when-it-is h2,
 .section.lp-now-it-is h2,
-.section.lp-after-it-is h2 {
+.section.lp-after-it-is h2,
+.section.lp-live-data-it-is h2 {
 	font-size: 5.5rem;
 	z-index: 10;
 }
@@ -341,6 +342,14 @@ strong {
 
 .howbgholder {
 	background-image: url(img/rocket.png);
+}
+
+.livebgholder {
+	background-image: url(img/data.png);
+}
+
+.streambgholder {
+	background-image: url(img/stream.png);
 }
 
 /* Blog pages */
@@ -846,7 +855,8 @@ article.type-post h2 {
 	line-height: 30px;
 }
 
-.current-talk .bgholder {
+.current-talk .bgholder,
+.live-data .bgholder {
 	top: -30px;
 }
 
@@ -925,6 +935,43 @@ article.type-post h2 {
 	margin-bottom: 5px;
 }
 
+/* Live Data
+–––––––––––––––––––––––––––––––––––––––––––––––––– */
+
+.page-template-livedata-page .viefulllinks h4 a,
+.page-template-livedata-page .viefulllinks h4 a:visited {
+	color: #80456b !important;
+}
+
+.page-template-livedata-page .major {
+	text-align: right;
+}
+
+.page-template-livedata-page .major h1 {
+	font-size: 10rem;
+	margin: 0;
+}
+
+.page-template-livedata-page .minor h3 {
+	margin-bottom: 0;
+	margin-top: 5rem;
+}
+
+.page-template-livedata-page .jbsdata .minor {
+	border-left: 3px #90c3d3 solid;
+	padding-left: 4%;
+	height: 100%;
+}
+
+.page-template-livedata-page .jbsdata .row {
+	margin-top: 0;
+	height: 140px;
+}
+
+.page-template-livedata-page .section-localevents h2 {
+	font-size: 5.5rem;
+}
+
 /* Speakers
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 .page-template-the-speakers-page .gwtd-team-member-header h4 {
@@ -959,7 +1006,8 @@ body.page-template-landing-page {
 	.section.lp-how-to-get-involved h2,
 	.section.lp-when-it-is h2,
 	.section.lp-now-it-is h2,
-	.section.lp-after-it-is h2 {
+	.section.lp-after-it-is h2,
+	.section.lp-live-data-it-is h2 {
 		font-size: 4.5rem;
 	}
 
@@ -985,6 +1033,7 @@ body.page-template-landing-page {
 	.the-time h1 {
 		font-size: 3rem;
 	}
+
 	.the-time h6 {
 		font-size: 1rem;
 	}
@@ -994,6 +1043,7 @@ body.page-template-landing-page {
 	.the-time h6 {
 		font-size: 1.1rem;
 	}
+
 	.the-time h1 {
 		font-size: 4rem;
 	}
@@ -1016,7 +1066,8 @@ body.page-template-landing-page {
 	.section.lp-how-to-get-involved h2,
 	.section.lp-when-it-is h2,
 	.section.lp-now-it-is h2,
-	.section.lp-after-it-is h2 {
+	.section.lp-after-it-is h2,
+	.section.lp-live-data-it-is h2 {
 		font-size: 3.5rem;
 		margin: 5rem 0;
 	}
@@ -1106,6 +1157,7 @@ body.page-template-landing-page {
 	.the-time h6 {
 		font-size: 1vw;
 	}
+
 	.the-time h1 {
 		font-size: 4vw;
 	}
@@ -1179,6 +1231,7 @@ body.page-template-landing-page {
 	.the-time h6 {
 		font-size: 1.3rem;
 	}
+
 	.the-time {
 		text-align: left;
 		margin-bottom: 2rem;
